gcc/testsuite/gfortran.dg/write_invalid_format.f90
! { dg-do "compile" }
! PR fortran/35582 - ICE on invalid format
! Testcase contributed by
! Leandro Martinez <leandromartinez DOT spam AT gmail DOT com> 

  real, parameter  :: a = 1.
  write(*,a) 'test'           ! { dg-error "expression in FORMAT tag" }
end

